<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/name_text"
            android:textAlignment="center"
            app:fontFamily="@font/roboto"
            style="@style/NameStyle"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:ems="10"
            android:id="@+id/nickname_edit" style="@style/NameStyle" android:hint="@string/what_is_your_nickname"/>
    <Button
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/done_button"
            android:layout_gravity="center_horizontal" style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginTop="@dimen/layout_margin"
            android:fontFamily="@font/roboto"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/nickname_text"
            style="@style/NameStyle"
            android:visibility="gone"
            android:background="@color/colorAccent"
            android:paddingBottom="@dimen/small_padding"/>
    <ImageView
            android:id="@+id/star_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/btn_star_big_on" android:contentDescription="@string/yellow_star"
            android:layout_marginTop="@dimen/yellow_star"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/bio_scroll">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/bio_text" style="@style/NameStyle"
                android:text="@string/bio"/>
    </ScrollView>
</LinearLayout>